--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Material-UI Website</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My Material-UI Web Page</title>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet"
-          href="https://unpkg.com/material-ui@4.7.0/dist/css/material-ui.min.css" />
+          href="https://unpkg.com/material-ui/core/umd/material-ui.production.min.css" />
+    <style>
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <AppBar position="static">
-            <Toolbar>
-                <Typography variant="h6" color="inherit">
-                    My Website
-                </Typography>
-                <div style={{ marginLeft: "auto" }}>
-                    <Button color="inherit">Home</Button>
-                    <Button color="inherit">News</Button>
-                    <Button color="inherit">OpenAI Info</Button>
-                </div>
-            </Toolbar>
-        </AppBar>
+    <div class="container">
+        <h1>My Material-UI Web Page</h1>
+        <p>
+            This is an example of a responsive standalone HTML web page built with
+            Material-UI and Material-UI styling.
+        </p>
+        <button class="material-icons"
+                style="font-size: 36px; color: #3f51b5; background: #fff;">
+            star
+        </button>
     </div>
-    <div style={{ padding: 24 }}>
-        <Typography variant="h4">Welcome to my website!</Typography>
-        <Typography variant="body1">
-            This is a basic HTML page built with Material-UI.
-        </Typography>
-    </div>
-    <script src="https://unpkg.com/material-ui@4.7.0/dist/material-ui.min.js"></script>
 </body>
 </html>
