--- a/index.html
+++ b/index.html
@@ -19,24 +19,28 @@
     <script type="text/javascript" src="https://unpkg.com/material-ui/core/umd/material-ui.production.min.js"></script>
 </head>
 <body>
-    <div id="root">
-        <ul>
-            <li>
-                <i class="material-icons">menu</i>
-                <ul>
-                    <a href="#section1">
-                    <li>Menu Item 1</li></a>
-                    <a href="#section2">
-                    <li>Menu Item 2</li></a>
-                    <a href="#section3">
-                    <li>Menu Item 3</li></a>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
     <div class="container">
         <h1>My Material-UI Web Page</h1>
+        <div id="root">
+            <ul>
+                <li>
+                    <i class="material-icons">menu</i>
+                    <ul>
+                        <a href="#section1">
+                        <li>Menu Item 1</li></a>
+                        <a href="#section2">
+                        <li>Menu Item 2</li></a>
+                        <a href="#section3">
+                        <li>Menu Item 3</li></a>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <Menu>
+            <a href="#section1"><MenuItem>Menu Item 1</MenuItem></a>
+            <a href="#section2"><MenuItem>Menu Item 2</MenuItem></a>
+            <a href="#section3"><MenuItem>Menu Item 3</MenuItem></a>
+        </Menu>
         <p>
             This is an example of a responsive standalone HTML web page built with
             Material-UI and Material-UI styling.
@@ -45,18 +49,17 @@
                 style="font-size: 36px; color: #3f51b5; background: #fff;">
             star
         </button>
-    </div>
-    <div id="section1">
-        ...content for section 1...
-    </div>
+        <div id="section1">
+            ...content for section 1...
+        </div>
 
-    <div id="section2">
-        ...content for section 2...
-    </div>
+        <div id="section2">
+            ...content for section 2...
+        </div>
 
-    <div id="section3">
-        ...content for section 3...
+        <div id="section3">
+            ...content for section 3...
+        </div>
     </div>
-
 </body>
 </html>
